[project]
name = "concarnenode"
description = "Nodes:Bing Image Grabber, Zephyr chat, Hermes Chat"
version = "1.0.0"
license = "LICENSE"
dependencies = ["--i https://huggingface.github.io/autogptq-index/whl/cu118/", "auto-gptq"]

[project.urls]
Repository = "https://github.com/concarne000/ConCarneNode"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = ""
DisplayName = "ConCarneNode"
Icon = ""
